--- a/.github/workflows/add_project.yml
+++ b/.github/workflows/add_project.yml
@@ -17,9 +17,6 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up GitHub CLI
-        uses: cli/gh-action@v2
-        
       - name: Define label rules
         run: |
           echo "RESTRICTED=approved,security,release-ready" >> $GITHUB_ENV
@@ -27,6 +24,8 @@ jobs:
           echo "MAINTAINERS=your-username1,your-username2" >> $GITHUB_ENV
 
       - name: Enforce label restrictions
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           LABEL="${GITHUB_EVENT_LABEL_NAME}"
           SENDER="${GITHUB_EVENT_SENDER_LOGIN}"
@@ -52,25 +51,32 @@ jobs:
 
       - name: Process project if approved
         if: ${{ github.event.label.name == 'approved' && contains(env.MAINTAINERS, github.event.sender.login) }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NAME: ""
+          REPO: ""
+          WEBSITE: ""
+          DESC: ""
+          CATEGORY: ""
         run: |
           echo "Approved label added by maintainer. Processing project..."
 
           ISSUE_BODY=$(gh issue view ${{ github.event.issue.number }} --json body -q '.body')
 
-          NAME=$(echo "$ISSUE_BODY" | grep -A1 "Project Name" | tail -n1 | xargs)
-          REPO=$(echo "$ISSUE_BODY" | grep -A1 "Repository URL" | tail -n1 | xargs)
-          WEBSITE=$(echo "$ISSUE_BODY" | grep -A1 "Project Website URL" | tail -n1 | xargs)
-          DESC=$(echo "$ISSUE_BODY" | grep -A1 "Short Description" | tail -n1 | xargs)
-          CATEGORY=$(echo "$ISSUE_BODY" | grep -A1 "Category" | tail -n1 | xargs)
+          export NAME=$(echo "$ISSUE_BODY" | grep -A1 "Project Name" | tail -n1 | xargs)
+          export REPO=$(echo "$ISSUE_BODY" | grep -A1 "Repository URL" | tail -n1 | xargs)
+          export WEBSITE=$(echo "$ISSUE_BODY" | grep -A1 "Project Website URL" | tail -n1 | xargs)
+          export DESC=$(echo "$ISSUE_BODY" | grep -A1 "Short Description" | tail -n1 | xargs)
+          export CATEGORY=$(echo "$ISSUE_BODY" | grep -A1 "Category" | tail -n1 | xargs)
 
           python3 - <<'PY'
           import re
           from pathlib import Path
+          import os
 
           readme = Path("README.md")
           text = readme.read_text(encoding="utf-8") if readme.exists() else ""
 
-          import os
           name = os.environ["NAME"]
           repo = os.environ["REPO"]
           website = os.environ["WEBSITE"]
@@ -135,6 +141,8 @@ jobs:
 
       - name: Close issue and comment
         if: ${{ github.event.label.name == 'approved' && contains(env.MAINTAINERS, github.event.sender.login) }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           ISSUE_NUMBER=${{ github.event.issue.number }}
           gh issue comment $ISSUE_NUMBER --body "Project has been added, PR merged automatically, and branch deleted. 🎉"
