--- a/.github/workflows/add_project.yml
+++ b/.github/workflows/add_project.yml
@@ -128,13 +128,15 @@ jobs:
           commit-message: "Add project: $NAME"
           token: ${{ secrets.GITHUB_TOKEN }}
           delete-branch: true
-      
+
       - name: Auto-merge PR with MERGE_TOKEN
         if: ${{ github.event.label.name == 'approved' && contains(env.MAINTAINERS, github.event.sender.login) }}
         uses: pascalgn/automerge-action@v0.16.4
-        with:
-          token: ${{ secrets.MERGE_TOKEN }}
-          mergeMethod: squash
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MERGE_LABELS: "approved"
+          MERGE_METHOD: "squash"
+          MERGE_COMMIT_MESSAGE: "pull-request-title-and-description"
 
       - name: Close issue and comment
         if: ${{ github.event.label.name == 'approved' && contains(env.MAINTAINERS, github.event.sender.login) }}
