--- a/.github/workflows/add_project.yml
+++ b/.github/workflows/add_project.yml
@@ -1,12 +1,8 @@
-name: Add Project and Auto Merge
+name: Add Project from Issue
 
 on:
   issues:
     types: [labeled]
-  workflow_run:
-    workflows: ["Add Project and Auto Merge"]
-    types:
-      - completed
 
 permissions:
   contents: write
@@ -15,11 +11,13 @@ permissions:
 
 jobs:
   restrict-and-add-project:
-    if: github.event_name == 'issues'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+
+      - name: Setup GitHub CLI
+        uses: actions/setup-gh-cli@v2
 
       - name: Define label rules
         run: |
@@ -39,6 +37,7 @@ jobs:
           IFS=',' read -ra ALLOWED_ARRAY <<< "$ALLOWED"
           IFS=',' read -ra MAINTAINERS_ARRAY <<< "$MAINTAINERS"
 
+          # Remove restricted label if sender is not maintainer
           if [[ " ${RESTRICTED_ARRAY[*]} " =~ " $LABEL " ]] && [[ ! " ${MAINTAINERS_ARRAY[*]} " =~ " $SENDER " ]]; then
             echo "Restricted label '$LABEL' added by non-maintainer. Removing..."
             gh issue edit $ISSUE_NUMBER --remove-label "$LABEL"
@@ -46,6 +45,7 @@ jobs:
             exit 0
           fi
 
+          # Remove label if not allowed
           if [[ ! " ${RESTRICTED_ARRAY[*]} " =~ " $LABEL " ]] && [[ ! " ${ALLOWED_ARRAY[*]} " =~ " $LABEL " ]]; then
             echo "Label '$LABEL' is not allowed. Removing..."
             gh issue edit $ISSUE_NUMBER --remove-label "$LABEL"
@@ -131,23 +131,18 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           delete-branch: true
 
-  auto-merge-pr:
-    if: github.event_name == 'workflow_run'
-    runs-on: ubuntu-latest
-    needs: restrict-and-add-project
-    steps:
-      - name: Auto-merge PR
-        uses: pascalgn/automerge-action@v0.16.4
+      - name: Merge PR, delete branch, and close issue
+        if: ${{ github.event.label.name == 'approved' && contains(env.MAINTAINERS, github.event.sender.login) }}
         env:
           GITHUB_TOKEN: ${{ secrets.MERGE_TOKEN }}
-          MERGE_LABELS: "approved"
-          MERGE_METHOD: squash
-          MERGE_COMMIT_MESSAGE: pull-request-title-and-description
-
-      - name: Close original issue
         run: |
-          ISSUE_NUMBER=${{ github.event.workflow_run.head_commit.message }}
-          gh issue close $ISSUE_NUMBER --repo ${{ github.repository }}
-          gh issue comment $ISSUE_NUMBER --body "Project added, PR merged, branch deleted. 🎉"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Get PR number for the branch
+          PR_NUMBER=$(gh pr list --state open --head add-project-${{ github.event.issue.number }} --json number -q '.[0].number')
+          if [ "$PR_NUMBER" != "null" ]; then
+            echo "Merging PR #$PR_NUMBER..."
+            gh pr merge $PR_NUMBER --squash --admin --delete-branch
+            gh issue comment ${{ github.event.issue.number }} --body "Project added, PR merged, branch deleted. 🎉"
+            gh issue close ${{ github.event.issue.number }}
+          else
+            echo "No open PR found for add-project-${{ github.event.issue.number }}"
+          fi
