--- a/.github/workflows/add_project.yml
+++ b/.github/workflows/add_project.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup GitHub CLI
-        uses: actions/setup-gh-cli@v2
+        uses: cli/cli-action@v2
 
       - name: Define label rules
         run: |
