--- a/.github/workflows/add_project.yml
+++ b/.github/workflows/add_project.yml
@@ -13,15 +13,18 @@ jobs:
   restrict-and-add-project:
     runs-on: ubuntu-latest
     steps:
+      # Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Define allowed and restricted labels
       - name: Define label rules
         run: |
           echo "RESTRICTED=approved,security,release-ready" >> $GITHUB_ENV
           echo "ALLOWED=bug,question,help wanted,enhancement,Music,Video,Chatbot" >> $GITHUB_ENV
           echo "MAINTAINERS=arinagrawal05" >> $GITHUB_ENV
 
+      # Enforce label restrictions
       - name: Enforce label restrictions
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -48,8 +51,10 @@ jobs:
             exit 0
           fi
 
-      - name: Process project if approved
+      # Process project if approved
+      - name: Extract project info
         if: ${{ github.event.label.name == 'approved' && contains(env.MAINTAINERS, github.event.sender.login) }}
+        id: extract
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -57,12 +62,21 @@ jobs:
 
           ISSUE_BODY=$(gh issue view ${{ github.event.issue.number }} --json body -q '.body')
 
-          export NAME=$(echo "$ISSUE_BODY" | grep -A1 "Project Name" | tail -n1 | xargs)
-          export REPO=$(echo "$ISSUE_BODY" | grep -A1 "Repository URL" | tail -n1 | xargs)
-          export WEBSITE=$(echo "$ISSUE_BODY" | grep -A1 "Project Website URL" | tail -n1 | xargs)
-          export DESC=$(echo "$ISSUE_BODY" | grep -A1 "Short Description" | tail -n1 | xargs)
-          export CATEGORY=$(echo "$ISSUE_BODY" | grep -A1 "Category" | tail -n1 | xargs)
+          NAME=$(echo "$ISSUE_BODY" | grep -A1 "Project Name" | tail -n1 | xargs)
+          REPO=$(echo "$ISSUE_BODY" | grep -A1 "Repository URL" | tail -n1 | xargs)
+          WEBSITE=$(echo "$ISSUE_BODY" | grep -A1 "Project Website URL" | tail -n1 | xargs)
+          DESC=$(echo "$ISSUE_BODY" | grep -A1 "Short Description" | tail -n1 | xargs)
+          CATEGORY=$(echo "$ISSUE_BODY" | grep -A1 "Category" | tail -n1 | xargs)
 
+          echo "NAME=$NAME" >> $GITHUB_ENV
+          echo "REPO=$REPO" >> $GITHUB_ENV
+          echo "WEBSITE=$WEBSITE" >> $GITHUB_ENV
+          echo "DESC=$DESC" >> $GITHUB_ENV
+          echo "CATEGORY=$CATEGORY" >> $GITHUB_ENV
+
+      - name: Update README
+        if: ${{ github.event.label.name == 'approved' && contains(env.MAINTAINERS, github.event.sender.login) }}
+        run: |
           python3 - <<'PY'
 import re
 from pathlib import Path
@@ -75,7 +89,8 @@ name = os.environ["NAME"]
 repo = os.environ["REPO"]
 website = os.environ["WEBSITE"]
 desc = os.environ["DESC"]
-category = os.environ["CATEGORY"] or "Other"
+category = os.environ.get("CATEGORY") or "Other"
+
 website_md = f"[{website}]({website})" if website else "—"
 row = f"| {name} | [Repo]({repo}) | {website_md} | {desc} |"
 
@@ -110,29 +125,31 @@ else:
     lines.append("|------|------|---------|-------------|")
     lines.append(row)
 
-readme.write_text("\n".join(lines)+"\n", encoding="utf-8")
+readme.write_text("\n".join(lines) + "\n", encoding="utf-8")
 print(f"Inserted project '{name}' into '{category}'")
 PY
 
+      # Create Pull Request
       - name: Create Pull Request
         if: ${{ github.event.label.name == 'approved' && contains(env.MAINTAINERS, github.event.sender.login) }}
         id: create_pr
         uses: peter-evans/create-pull-request@v7
         with:
           branch: add-project-${{ github.event.issue.number }}
-          title: Add project
-          body: This PR adds a new project from issue #${{ github.event.issue.number }}
-          commit-message: "Add project: $NAME"
+          title: 'Add project'
+          body: 'This PR adds a new project from issue #${{ github.event.issue.number }}'
+          commit-message: "Add project: ${{ env.NAME }}"
           token: ${{ secrets.GITHUB_TOKEN }}
           delete-branch: true
 
+      # Merge PR, delete branch, and close issue
       - name: Merge PR, delete branch, and close issue
         if: ${{ github.event.label.name == 'approved' && contains(env.MAINTAINERS, github.event.sender.login) }}
         env:
           GH_TOKEN: ${{ secrets.MERGE_TOKEN }}
         run: |
           PR_NUMBER=$(gh pr list --state open --head add-project-${{ github.event.issue.number }} --json number -q '.[0].number')
-          if [ "$PR_NUMBER" != "null" ]; then
+          if [ "$PR_NUMBER" != "null" ] && [ -n "$PR_NUMBER" ]; then
             echo "Merging PR #$PR_NUMBER..."
             gh pr merge $PR_NUMBER --squash --admin --delete-branch
             gh issue comment ${{ github.event.issue.number }} --body "Project added, PR merged, branch deleted. 🎉"
